# core/views/location.py
@@ -1,23 +1,32 @@
-from rest_framework.mixins import ListModelMixin, RetrieveModelMixin
+from django.conf import settings
+
 from rest_framework.permissions import IsAuthenticated
-from rest_framework.viewsets import GenericViewSet
+from rest_framework.response import Response
+from rest_framework.status import HTTP_200_OK, HTTP_400_BAD_REQUEST
+from rest_framework.views import APIView
 
-from ..models import City
-from ..permissions import IsVerified
-from ..serializers.city import CitySerializer
+from core.forms import LocationForm
+from core.models import Location
+from core.permissions import IsVerified
+from core.serializers.location import LocationSerializer
+from core.geo_api.geo_api import GoogleGeoAPI
 
 
-class LocationViewSet(ListModelMixin, RetrieveModelMixin, GenericViewSet):
-    queryset = City.objects.exclude(name='Unknown')
-    serializer_class = CitySerializer
+class LocationView(APIView):
+    serializer_class = LocationSerializer
     permission_classes = (IsAuthenticated, IsVerified)
+    form_class = LocationForm
 
-    def get_queryset(self):
-        qs = super().get_queryset()
-        city = self.request.query_params.get('city', None)
-        country = self.request.query_params.get('country', None)
+    def get(self, request):
+        form = type(self).form_class(request.query_params)
+        if form.is_valid():
+            locations = Location.search_api(form.cleaned_data['address'])
+            serializer = LocationSerializer(locations, many=True)
 
-        qs = qs.filter(name__istartswith=city) if city else qs
-        qs = qs.filter(country__name__istartswith=country) if country else qs
+            data = serializer.data
+            status = HTTP_200_OK
+        else:
+            data = form.errors
+            status = HTTP_400_BAD_REQUEST
 
-        return qs
+        return Response(status=status, data=data)
